Agentforce/force-app/main/default/objects/Case/fields/RAG_Indicators__c.field-meta.xml
<CustomField>
    <fullName>RAG_Indicators__c</fullName>
    <formula>CASE( RAG__c,
					&quot;Red&quot;, IMAGE(&apos;/resource/RAGFlagRed&apos;,&quot;Red&quot;),
					&quot;Green&quot;, IMAGE(&apos;/resource/RAGFlagGreen&apos;,&quot;Green&quot;),
					&quot;Amber&quot;, IMAGE(&apos;/resource/RAGFlagAmber&apos;,&quot;Amber&quot;),
					NULL
					)</formula>
    <label>RAG Indicators</label>
    <type>Text</type>
</CustomField>