Agentforce/force-app/main/default/objects/Case/fields/Regional_Director__c.field-meta.xml
<CustomField>
    <fullName>Regional_Director__c</fullName>
    <label>Regional Director</label>
    <length>200</length>
    <type>Text</type>
</CustomField>