Agentforce/force-app/main/default/objects/Case/fields/Regional_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Manager__c</fullName>
    <label>Regional Manager</label>
    <length>200</length>
    <type>Text</type>
</CustomField>