Agentforce/force-app/main/default/objects/Case/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Catering</fullName>
                <color>#FFFFFF</color>
                <label>Catering</label>
            </value>
            <value>
                <fullName>Central Functions</fullName>
                <color>#FFFFFF</color>
                <label>Central Functions</label>
            </value>
            <value>
                <fullName>Cleaning</fullName>
                <color>#FFFFFF</color>
                <label>Cleaning</label>
            </value>
            <value>
                <fullName>Hard Services</fullName>
                <color>#FFFFFF</color>
                <label>Hard Services</label>
            </value>
            <value>
                <fullName>Private</fullName>
                <color>#FFFFFF</color>
                <label>Private</label>
            </value>
            <value>
                <fullName>Public</fullName>
                <color>#FFFFFF</color>
                <label>Public</label>
            </value>
            <value>
                <fullName>Security</fullName>
                <color>#FFFFFF</color>
                <label>Security</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>