Agentforce/force-app/main/default/objects/Case/fields/Sector_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sector_Sub_Category__c</fullName>
    <description>Used by the HR team as child picklists to the Sector field</description>
    <label>Sector Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sector__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business &amp; Industry</fullName>
            </value>
            <value>
                <fullName>Client Solutions</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
                <color>#FFFFFF</color>
                <label>Core</label>
            </value>
            <value>
                <fullName>CPS</fullName>
                <color>#FFFFFF</color>
                <label>CPS</label>
            </value>
            <value>
                <fullName>Destinations</fullName>
                <color>#FFFFFF</color>
                <label>Destinations</label>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>ESG</fullName>
            </value>
            <value>
                <fullName>Estates</fullName>
            </value>
            <value>
                <fullName>Exclusive</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Groceries</fullName>
                <color>#FFFFFF</color>
                <label>Groceries</label>
            </value>
            <value>
                <fullName>H&amp;E - Other</fullName>
            </value>
            <value>
                <fullName>H&amp;E - PFI</fullName>
            </value>
            <value>
                <fullName>Healthcare &amp; Education</fullName>
            </value>
            <value>
                <fullName>HMCTS</fullName>
                <color>#FFFFFF</color>
                <label>HMCTS</label>
            </value>
            <value>
                <fullName>Hotels</fullName>
                <color>#FFFFFF</color>
                <label>Hotels</label>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Industries</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
                <color>#FFFFFF</color>
                <label>Industry</label>
            </value>
            <value>
                <fullName>Integrated Services</fullName>
                <color>#FFFFFF</color>
                <label>Integrated Services</label>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Legal &amp; Risk</fullName>
            </value>
            <value>
                <fullName>Leisure</fullName>
            </value>
            <value>
                <fullName>M&amp;A</fullName>
            </value>
            <value>
                <fullName>Marcomms</fullName>
            </value>
            <value>
                <fullName>Maxim</fullName>
            </value>
            <value>
                <fullName>MOJ/HO</fullName>
            </value>
            <value>
                <fullName>Morrisons</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>