Agentforce/force-app/main/default/objects/Case/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hazardous Waste</fullName>
                <color>#FFFFFF</color>
                <label>Hazardous Waste</label>
            </value>
            <value>
                <fullName>Recycling</fullName>
                <color>#FFFFFF</color>
                <label>Recycling</label>
            </value>
            <value>
                <fullName>Waste Management</fullName>
                <color>#FFFFFF</color>
                <label>Waste Management</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>