Agentforce/force-app/main/default/objects/Case/fields/Sick_Pay_Status__c.field-meta.xml
<CustomField>
    <fullName>Sick_Pay_Status__c</fullName>
    <inlineHelpText>Where an Employee is Long Term Sick/Ill Health what is the status of their sick pay?</inlineHelpText>
    <label>Sick Pay Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSP</fullName>
            </value>
            <value>
                <fullName>SSP</fullName>
            </value>
            <value>
                <fullName>No Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>