Agentforce/force-app/main/default/objects/Case/fields/Site_Text__c.field-meta.xml
<CustomField>
    <fullName>Site_Text__c</fullName>
    <label>Site</label>
    <length>200</length>
    <type>Text</type>
</CustomField>