Agentforce/force-app/main/default/objects/Case/fields/Support_Required__c.field-meta.xml
<CustomField>
    <fullName>Support_Required__c</fullName>
    <label>Support Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <color>#FFFFFF</color>
                <label>Email</label>
            </value>
            <value>
                <fullName>Face to Face</fullName>
                <color>#FFFFFF</color>
                <label>Face to Face</label>
            </value>
            <value>
                <fullName>Telephone</fullName>
                <color>#FFFFFF</color>
                <label>Telephone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>