Agentforce/force-app/main/default/objects/Case/fields/Suspension__c.field-meta.xml
<CustomField>
    <fullName>Suspension__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suspension</label>
    <referenceTo>Suspension__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>