Agentforce/force-app/main/default/objects/Case/fields/Suspension_Exists__c.field-meta.xml
<CustomField>
    <fullName>Suspension_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Value is TRUE where an associated Suspension Record exists</description>
    <label>Suspension</label>
    <type>Checkbox</type>
</CustomField>