Agentforce/force-app/main/default/objects/Case/fields/TAAP_Owner__c.field-meta.xml
<CustomField>
    <fullName>TAAP_Owner__c</fullName>
    <label>TAAP Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>