Agentforce/force-app/main/default/objects/Case/fields/Training_Required__c.field-meta.xml
<CustomField>
    <fullName>Training_Required__c</fullName>
    <label>Training Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <color>#FFFFFF</color>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
                <color>#FFFFFF</color>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>