Agentforce/force-app/main/default/objects/Case/fields/Transferee_Transferor__c.field-meta.xml
<CustomField>
    <fullName>Transferee_Transferor__c</fullName>
    <description>Name of the Transferee or Transferor</description>
    <label>Transferee/Transferor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>