Agentforce/force-app/main/default/objects/Case/recordTypes/HR_Case.recordType-meta.xml
<RecordType>
    <fullName>HR_Case</fullName>
    <active>true</active>
    <businessProcess>HR Case Management</businessProcess>
    <label>HR Case</label>
</RecordType>