Agentforce/force-app/main/default/objects/Case/validationRules/Further_Detail_Required_Government.validationRule-meta.xml
<ValidationRule>
    <fullName>Further_Detail_Required_Government</fullName>
    <active>true</active>
    <description>Require Description for Sector &apos;Government&apos;</description>
    <errorConditionFormula>AND(!$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,ISBLANK(Description) &amp;&amp;
ISPICKVAL(Sector__c , &quot;Government&quot;)
)</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Please provide further details</errorMessage>
</ValidationRule>