Agentforce/force-app/main/default/objects/Case/validationRules/Payroll_No_Numbers_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Payroll_No_Numbers_Only</fullName>
    <active>false</active>
    <errorConditionFormula>AND(!$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,
(REGEX(Employee_Payroll_No__c, &quot;^[0-9]*$&quot;))  
)</errorConditionFormula>
    <errorDisplayField>Employee_Payroll_No__c</errorDisplayField>
    <errorMessage>Only numbers are allowed [0-9]</errorMessage>
</ValidationRule>