Agentforce/force-app/main/default/objects/Case/listViews/All_Cases.listView-meta.xml
<ListView>
    <fullName>All_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Owner_Name__c</columns>
    <columns>Employee_Lookup__c</columns>
    <columns>Case_Manager_Lookup__c</columns>
    <columns>Site_Text__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Issue_Type__c</columns>
    <columns>Issue_Type_Sub_Category__c</columns>
    <columns>Next_Action_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Cases</label>
    <sharedTo>
        <roleAndSubordinates>UK_I_HR</roleAndSubordinates>
    </sharedTo>
</ListView>