Agentforce/force-app/main/default/objects/Case/listViews/All_Closed_Cases.listView-meta.xml
<ListView>
    <fullName>All_Closed_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>OWNER_NAME</columns>
    <columns>Employee_Lookup__c</columns>
    <columns>Case_Manager_Lookup__c</columns>
    <columns>Site_Text__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Issue_Type__c</columns>
    <columns>Issue_Type_Sub_Category__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Closed Cases</label>
    <sharedTo>
        <roleAndSubordinates>UK_I_HR</roleAndSubordinates>
    </sharedTo>
</ListView>