Agentforce/force-app/main/default/objects/Case/listViews/Cases_with_Suspensions.listView-meta.xml
<ListView>
    <fullName>Cases_with_Suspensions</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>OWNER_NAME</columns>
    <columns>Employee_Lookup__c</columns>
    <columns>Case_Manager_Lookup__c</columns>
    <columns>Site_Text__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Issue_Type__c</columns>
    <columns>Issue_Type_Sub_Category__c</columns>
    <columns>Next_Action_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Suspension_Exists__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Cases with Suspensions</label>
</ListView>