Agentforce/force-app/main/default/objects/Case/listViews/HR_Unassigned_Cases_Case.listView-meta.xml
<ListView>
    <fullName>HR_Unassigned_Cases_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>RAG__c</columns>
    <columns>Issue_Type__c</columns>
    <columns>Issue_Type_Sub_Category__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>HR Unassigned Cases</label>
    <queue>HR_Unassigned_Cases</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>