Agentforce/force-app/main/default/objects/Case/listViews/MyCases.listView-meta.xml
<ListView>
    <fullName>MyCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>Employee_Lookup__c</columns>
    <columns>Case_Manager_Lookup__c</columns>
    <columns>Site_Text__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Issue_Type__c</columns>
    <columns>Issue_Type_Sub_Category__c</columns>
    <columns>Next_Action_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Cases</label>
</ListView>