Agentforce/force-app/main/default/objects/Case/listViews/MyOpenCases.listView-meta.xml
<ListView>
    <fullName>MyOpenCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>Employee_Lookup__c</columns>
    <columns>Case_Manager_Lookup__c</columns>
    <columns>Site_Text__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Issue_Type__c</columns>
    <columns>Issue_Type_Sub_Category__c</columns>
    <columns>Next_Action_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Open Cases</label>
</ListView>